syntax = "proto3";

option go_package="calculator/calculatorpb";
package calculator;

message SumRequest {
  int64 addend_one = 1;
  int64 addend_two = 2;
}

message SumResponse {
  int64 result = 1;
}

message PrimeRequest {
  int64 prime_number = 1;
}

message PrimeResponse {
  int64 result = 1;
}

message AverageRequest {
  int64 number = 1;
}

message AverageResponse {
  double answer = 1;
}

message MaximumRequest {
  int64 number = 1;
}

message MaximumResponse {
  int64 result = 1;
}

message SquareRootRequest {
  int64 number = 1;
}

message SquareRootResponse {
  double number = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};
  rpc Decompose(PrimeRequest) returns (stream PrimeResponse) {};
  rpc Average(stream AverageRequest) returns (AverageResponse) {};
  rpc Maximum(stream MaximumRequest)  returns (stream MaximumResponse) {};
  // this rpc will throw an exception if the sent number is negative
  // the error being sent is of type INVALID ARGUMENT
  rpc SquareRoot(SquareRootRequest)  returns (SquareRootResponse) {};
}
